# software-challenge

./: .gitignore  README.md
backend/: crud.py  database.py  main.py  models.py  populate.py  pyproject.toml  schemas.py  somefile.db  tests.py
