[tool.poetry]
name = "software-challenge"
version = "0.1.0"
description = "Epigene challenge"
authors = ["Leonard Sellam <leonard@epigenelabs.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
SQLAlchemy = "^1.4.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
